--- a/useditemgiveaway/freepile/templates/base.html
+++ b/useditemgiveaway/freepile/templates/base.html
@@ -18,6 +18,10 @@
 <ul class="nav navbar-nav"> 
 <li><a href="{% url 'Item' %}">Items</a></li>
 <li><a href="{% url 'Comment' %}">Comments</a></li>
+<li><a href="{% url 'newitem' %}">Add Item</a></li>
+<li><a href="{% url 'newcomment' %}">Add Comment</a></li>
+<li><a href="{% url 'login' %}">Login</a></li>
+<li><a href="{% url 'logout' %}">Logout</a></li>
 </ul> 
 </div> 
 </nav> 
