--- a/useditemgiveaway/freepile/templates/freepile/Comment.html
+++ b/useditemgiveaway/freepile/templates/freepile/Comment.html
@@ -8,8 +8,8 @@
 </tr>
     {% for C in Comments_list%}
     <tr>
-        <td>{{ C.commentTitle }}</td>
-        <td>{{ C.commentText }}</td>
+        <td>{{ c.commentTitle }}</td>
+        <td>{{ c.commentText }}</td>
         
     </tr>
 
